<resources>
    <string name="app_name">APIKA</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="beranda">Beranda</string>
    <string name="agenda">Agenda</string>
    <string name="proyek">Proyek</string>
    <string name="program">Program</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agenda_baru">Agenda Baru</string>
    <string name="fitur_terkait">FITUR TERKAIT</string>
    <string name="proyek_terbaru">PROYEK TERBARU</string>
    <string name="rekomendasi_proyek">Rekomendasi Proyek</string>
    <string name="lihat_seluruhnya">Lihat seluruhnya</string>
    <string name="loker_baru">LOWONGAN KERJA BARU</string>
    <string name="rek_loker">Rekomendasi Lowongan Kerja</string>
    <string name="daftar_proyek_anda">Daftar Proyek Anda</string>
    <string name="events">Events</string>
    <string name="daftar_program_anda">Daftar Program Anda</string>
    <string name="judul_proyek">Judul Proyek</string>
    <string name="tambah_proyek">Tambah Proyek</string>
    <string name="kategori_proyek">Kategori Proyek</string>
    <string name="kualifikasi_proyek">Kualifikasi Proyek</string>
    <string name="deskripsi_proyek">Deskripsi Proyek</string>
    <string name="harga_proyek">Harga Proyek</string>
    <string name="batas_penawaran_proyek">Batas Penawaran Proyek</string>
    <string name="mulai_proyek">Mulai Proyek</string>
    <string name="proyek_berakhir">Proyek Berakhir</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="proyek_sudah_ditawar">Proyek ini sudah ditawar oleh</string>
    <string name="mulai_penawaran">Mulai Penawaran</string>
</resources>
