<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tambah_proyek"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.arjuna.apika.TambahProyekActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/judul_proyek"
            android:paddingBottom="2dp"/>
        <EditText
            android:inputType="text"
            android:id="@+id/et_judul_proyek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/kategori_proyek"
            android:paddingBottom="2dp"/>
        <EditText
            android:inputType="text"
            android:id="@+id/et_kategori_proyek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/kualifikasi_proyek"
            android:paddingBottom="2dp"/>
        <EditText
            android:inputType="text"
            android:id="@+id/et_kualifikasi_proyek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/deskripsi_proyek"
            android:paddingBottom="2dp"/>
        <EditText
            android:inputType="text"
            android:id="@+id/et_deskripsi_proyek"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/harga_proyek"
            android:paddingBottom="2dp"/>
        <EditText
            android:inputType="numberSigned"
            android:id="@+id/et_harga_proyek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/batas_penawaran_proyek"
            android:paddingBottom="2dp"/>
        <EditText
            android:inputType="date"
            android:id="@+id/et_batas_penawaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/mulai_proyek"
                    android:paddingBottom="2dp"/>
                <EditText
                    android:inputType="date"
                    android:id="@+id/et_mulai_proyek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"/>
            </LinearLayout>
            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/proyek_berakhir"
                    android:paddingBottom="2dp"/>
                <EditText
                    android:inputType="date"
                    android:id="@+id/et_akhir_proyek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_proyek"/>


    </LinearLayout>
</ScrollView>
