<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arjuna.apika.BerandaFragment">
    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@color/cardview_dark_background"
            android:scaleType="centerCrop"/>
        <!--Main content-->
        <LinearLayout
            android:id="@+id/beranda_main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agenda_baru"
                android:textSize="12sp"
                android:paddingBottom="10dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_agenda_baru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fitur_terkait"
                android:textSize="12sp"
                android:paddingBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
                <!--Menu kotak kotak-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:background="#2c2c2c2c"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_work_black_24dp"
                        android:tint="@color/colorWhite"
                        android:background="@color/colorYellow"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:paddingTop="5dp"
                        android:textSize="8sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Profil IKA"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:background="#2c2c2c2c"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_work_black_24dp"
                        android:tint="@color/colorWhite"
                        android:background="@color/colorYellow"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:paddingTop="5dp"
                        android:textSize="8sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Program"/>
                    <!--program kegiatan user company produk loker-->
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:background="#2c2c2c2c"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_work_black_24dp"
                        android:tint="@color/colorWhite"
                        android:background="@color/colorYellow"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:paddingTop="5dp"
                        android:textSize="8sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Kegiatan"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:background="#2c2c2c2c"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_work_black_24dp"
                        android:tint="@color/colorWhite"
                        android:background="@color/colorYellow"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:paddingTop="5dp"
                        android:textSize="8sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="User Company"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
                <!--Menu kotak kotak 2-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:background="#2c2c2c2c"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_work_black_24dp"
                        android:tint="@color/colorWhite"
                        android:background="@color/colorYellow"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:paddingTop="5dp"
                        android:textSize="8sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Produk"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:background="#2c2c2c2c"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_work_black_24dp"
                        android:tint="@color/colorWhite"
                        android:background="@color/colorYellow"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:paddingTop="5dp"
                        android:textSize="8sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Loker"/>
                    <!--program kegiatan user company produk loker-->
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="12"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proyek_terbaru"
                android:textSize="14sp"/>
            <TextView
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rekomendasi_proyek"
                android:textSize="11sp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_rek_proyek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lihat_seluruhnya"
                android:textSize="11sp"
                android:textStyle="bold"
                android:paddingBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loker_baru"
                android:textStyle="bold"
                android:textSize="14sp"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rek_loker"
                android:textSize="11sp"
                android:paddingBottom="10dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_rek_loker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lihat_seluruhnya"
                android:textSize="11sp"
                android:textStyle="bold"
                android:paddingBottom="15dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
